Switched to .newrow

--- a/libs/jade/colours.jade
+++ b/libs/jade/colours.jade
@@ -16,13 +16,13 @@ block sidebar
 block content
 	.articleContent
 		div
-			.row
+			.newrow
 				.span12
 					h3 Colour contrast
 					p The colour contrast ratio for text and interactive elements should be at least 4.5:1 #[a(href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html") as recommended by the W3C].
 					h3 Brand
 					p Colours as defined in the #[a(href="#") Brand Guidelines]. To be used in pairs as described below. These colours are not to be used for marketing communications such as campaigns, reporting and policy.
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--brand--heritage-blue
 					p Heritage Blue
 						br
@@ -33,7 +33,7 @@ block content
 						br
 						| @heritage-yellow
 						br
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--brand--responsible-purple
 					p Responsible Purple
 						br
@@ -44,7 +44,7 @@ block content
 						br
 						| @responsible-aqua
 						br
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--brand--inventive-teal
 					p Inventive Teal
 						br
@@ -55,7 +55,7 @@ block content
 						br
 						| @inventive-pink
 						br
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--brand--generous-green
 					p Generous Green
 						br
@@ -66,11 +66,11 @@ block content
 						br
 						| @generous-mauve
 						br
-			.row
+			.newrow
 				.span12
 					h3 Brand tints
 					p There are also variations of some of these swatches in lighter tints.
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--beta--heritage-blue-lighter
 					p Heritage Blue Lighter
 						br
@@ -91,11 +91,11 @@ block content
 						br
 						| @heritage-yellow-darker
 						br
-			.row
+			.newrow
 				.span12
 					h3 Extended palette
 					p Colours to extend the brand into actionable items. These colours shouldn't be used as brand or decorative colours, but purely for system and functional colours. A good example of their use is in form error handling.
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--beta--red
 					p Red
 						br
@@ -131,11 +131,11 @@ block content
 						br
 						| @aqua
 						br
-			.row
+			.newrow
 				.span12
 					h3 Extended palette tints
 					p Tint variations of the extended colour palette.
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--beta--red-light
 					p Red Light
 						br
@@ -196,11 +196,11 @@ block content
 						br
 						| @purple-dark
 						br
-			.row
+			.newrow
 				.span12
 					h3 Monochrome palette
 					p Range for text primarily, but also for neutral colouring.
-			.row
+			.newrow
 				.span4-sm.span6.swatch.swatch--mono--gray0
 					p Gray 0
 						br
@@ -246,11 +246,11 @@ block content
 						br
 						| @gray-8
 						br
-			//.row
+			//.newrow
 				.span12
 					h3 Adviser colour palette
 					p Range of colours used for adviser only content.
-			//.row
+			//.newrow
 				.span4-sm.span6.swatch.swatch--adviser--inventive-teal-light
 					p Inventive Teal Light
 						br
@@ -261,7 +261,7 @@ block content
 						br
 						| @inventive-teal-lighter
 						br
-			//.row
+			//.newrow
 				.span4-sm.span6.swatch.swatch--adviser-blue-gray
 					p Adviser Blue Gray
 						br
