Changed rows to newrow

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -6,18 +6,18 @@ block breadcrumbs
 
 block content
 	.articleContent
-		.row
+		.newrow
 			.span8
 				p.u-lede This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
 
-		.row
+		.newrow
 			.span12
 				h2#principles Digital principles
 				ul
 					li
 						a(href="principles.html") Digital principles
-		.row
-			.span4
+		.newrow
+			.span4-sm
 				h2#styles Styles
 				ul
 					li
@@ -40,7 +40,7 @@ block content
 							li
 								a(href="field-groups.html") Field groups
 
-			.span4
+			.span4-sm
 				h2#modules Modules
 				ul
 					//li
@@ -72,7 +72,7 @@ block content
 								a(href="overlay.html") Modal/Overlay
 							//li
 								a(href="reference.html") Reference tool
-			.span4
+			.span4-sm
 				h2#templates Templates
 				ul
 					li
