Add in missing div (cannot remove from EPiServer)

--- a/libs/jade/extent.jade
+++ b/libs/jade/extent.jade
@@ -25,7 +25,9 @@ block content
 				span.dialog__close-text Close
 
 		div.dialog__main#dialog-1-main
-			p The law can vary in different parts of the UK.
+			div
+				p The law can vary in different parts of the UK.
+				
 			ul.extent-selection
 				a.btn.btn-primary.extent-selection__button(href="?lang=en-GB") England
 				a.btn.btn-primary.extent-selection__button(href="?lang=en-NIR") Northern Ireland
