Fixed small disabled button

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -116,6 +116,14 @@ button:disabled {
     );
 }
 
+.btn-disabled.btn-small {
+    .btn-small(
+        @gray-3,
+        @gray-6,
+        @gray-6
+    );
+}
+
 // Multiple buttons in a set
 
 .btn-group {
