--- a/libs/jade/field-groups.jade
+++ b/libs/jade/field-groups.jade
@@ -55,7 +55,6 @@ block content
 						button.btn Week
 						button.btn Month
 						button.btn Year
-						button.btn Button
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
@@ -67,7 +66,38 @@ block content
 					| 		&lt;button class="btn"&gt;Week&lt;/button&gt;
 					| 		&lt;button class="btn"&gt;Month&lt;/button&gt;
 					| 		&lt;button class="btn"&gt;Year&lt;/button&gt;
-					| 		&lt;button class="btn"&gt;Button&lt;/button&gt;
+					| 	&lt;/div&gt;
+					| &lt;/fieldset&gt;
+
+			.example-box-plain
+				fieldset
+					label(for="field") Field group with checkbox buttons
+					.field-group.field-group--toggle
+						input#field(placeholder="£", type="number")
+						label.checkbox.checkbox--inline
+							input(checked name="checkbox-inline", type="checkbox", value="option1")
+							| Week
+						label.checkbox.checkbox--inline
+							input(name="checkbox-inline", type="checkbox", value="option2")
+							| Month
+						label.checkbox.checkbox--inline
+							input(name="checkbox-inline", type="checkbox", value="option3")
+							| Year
+			pre
+				code.language-html
+					| &lt;fieldset&gt;
+					| 	&lt;label for="field"&gt;Field group with checkbox buttons&lt;/label&gt;
+					| 	&lt;div class="field-group field-group--toggle"&gt;
+					| 		&lt;input id="field" placeholder="£" type="number"&gt;
+					| 		&lt;label class="checkbox checkbox--inline"&gt;
+					| 			&lt;input checked="" name="checkbox-inline" type="checkbox" value="option1"&gt;Week
+					| 		&lt;/label&gt;
+					| 		&lt;label class="checkbox checkbox--inline"&gt;
+					| 			&lt;input name="checkbox-inline" type="checkbox" value="option2"&gt;Month
+					| 		&lt;/label&gt;
+					| 		&lt;label class="checkbox checkbox--inline"&gt;
+					| 			&lt;input name="checkbox-inline" type="checkbox" value="option3"&gt;Year
+					| 		&lt;/label&gt;
 					| 	&lt;/div&gt;
 					| &lt;/fieldset&gt;
 
@@ -85,20 +115,6 @@ block content
 						label.radio.radio--inline
 							input(name="radio-inline", type="radio", value="option3")
 							| Year
-
-				fieldset
-					label(for="field") Field group with checkbox buttons
-					.field-group.field-group--toggle
-						input#field(placeholder="£", type="number")
-						label.checkbox.checkbox--inline
-							input(checked name="checkbox-inline", type="checkbox", value="option1")
-							| Week
-						label.checkbox.checkbox--inline
-							input(name="checkbox-inline", type="checkbox", value="option2")
-							| Month
-						label.checkbox.checkbox--inline
-							input(name="checkbox-inline", type="checkbox", value="option3")
-							| Year
 			pre
 				code.language-html
 					| &lt;fieldset&gt;
@@ -113,21 +129,6 @@ block content
 					| 		&lt;/label&gt;
 					| 		&lt;label class="radio radio--inline"&gt;
 					| 			&lt;input name="radio-inline" type="radio" value="option3"&gt;Year
-					| 		&lt;/label&gt;
-					| 	&lt;/div&gt;
-					| &lt;/fieldset&gt;
-					| &lt;fieldset&gt;
-					| 	&lt;label for="field"&gt;Field group with checkbox buttons&lt;/label&gt;
-					| 	&lt;div class="field-group field-group--toggle"&gt;
-					| 		&lt;input id="field" placeholder="£" type="number"&gt;
-					| 		&lt;label class="checkbox checkbox--inline"&gt;
-					| 			&lt;input checked="" name="checkbox-inline" type="checkbox" value="option1"&gt;Week
-					| 		&lt;/label&gt;
-					| 		&lt;label class="checkbox checkbox--inline"&gt;
-					| 			&lt;input name="checkbox-inline" type="checkbox" value="option2"&gt;Month
-					| 		&lt;/label&gt;
-					| 		&lt;label class="checkbox checkbox--inline"&gt;
-					| 			&lt;input name="checkbox-inline" type="checkbox" value="option3"&gt;Year
 					| 		&lt;/label&gt;
 					| 	&lt;/div&gt;
 					| &lt;/fieldset&gt;
