Removed label for attributes

--- a/libs/jade/buttons.jade
+++ b/libs/jade/buttons.jade
@@ -18,7 +18,7 @@ block content
 	.articleContent
 		div
 			.example-box-plain
-				label(for="buttonDescription") Buttons (directions)
+				label Buttons (directions)
 				button.btn.btn-primary-light.left-button-icon(type="button") Back
 				button.btn.btn-primary.right-button-icon(type="button") Continue
 				button.btn.btn-primary.tick-button-icon(type="submit") Submit
@@ -26,7 +26,6 @@ block content
 				// Recommending we use the lighter back button to differentiate between purposes
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons (directions)&lt;/label&gt;
 					| &lt;button type="button" class="btn btn-primary-light left-button-icon"&gt;Back&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
 					| &lt;button type="submit" class="btn btn-primary tick-button-icon"&gt;Submit&lt;/button&gt;
@@ -34,85 +33,78 @@ block content
 
 			// Testing back button
 			.example-box-plain
-				label(for="buttonDescription") Buttons (directions alternative)
+				label Buttons (directions alternative)
 				button.btn.btn-primary-cancel.back-button-icon(type="button") Back
 				button.btn.btn-primary-cancel.left-cancel-button-icon(type="button") Cancel
 				// Recommending we use the lighter back button to differentiate between purposes
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons (directions alternative)&lt;/label&gt;
 					| &lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-primary-cancel left-cancel-button-icon"&gt;Cancel&lt;/button&gt;
 
 			// Cmobining back button
 			.example-box-plain
-				label(for="buttonDescription") Buttons combined (directions alternative)
+				label Buttons combined (directions alternative)
 				button.btn.btn-primary-cancel.back-button-icon(type="button") Back
 				button.btn.btn-primary.right-button-icon(type="button") Continue
 				// Recommending we use the lighter back button to differentiate between purposes
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons combined (directions alternative)&lt;/label&gt;
 					| &lt;button type="button" class="btn btn-primary-cancel back-button-icon"&gt;Back&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
 
 			.example-box-plain
-				label(for="buttonDescription") Buttons (actions)
+				label Buttons (actions)
 				button.btn.btn-secondary.email-button-icon(type="button") Email
 				button.btn.btn-secondary.print-button-icon(type="button") Print
 				button.btn.btn-secondary.restart-button-icon(type="reset") Restart
 				button.btn.btn-secondary.save-button-icon(type="button") Save
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons (actions)&lt;/label&gt;
 					| &lt;button type="button" class="btn btn-secondary email-button-icon"&gt;Email&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-secondary print-button-icon"&gt;Print&lt;/button&gt;
 					| &lt;button type="reset" class="btn btn-secondary restart-button-icon"&gt;Restart&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-secondary save-button-icon"&gt;Save&lt;/button&gt;
 
 			.example-box-plain
-				label(for="buttonDescription") Buttons (additional)
+				label Buttons (additional)
 				button.btn.btn-disabled(disabled, type="button") Continue
 				button.btn.btn-success(type="button") Success
 				button.btn.btn-warning.exclamation-button-icon(type="button") Warning
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons (additional)&lt;/label&gt;
 					| &lt;button disabled="" type="button" class="btn btn-disabled"&gt;Continue&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-success"&gt;Success&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-warning exclamation-button-icon"&gt;Warning&lt;/button&gt;
 
 			.example-box-plain
-				label(for="buttonDescription") Buttons (right)
+				label Buttons (right)
 				button.btn.btn-secondary.btn-right.print-button-icon(type="button") Print
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons (right)&lt;/label&gt;
 					| &lt;button type="button" class="btn btn-secondary btn-right print-button-icon"&gt;Print&lt;/button&gt;
 
 			.example-box-plain
-				label(for="buttonDescription") Buttons (small)
+				label Buttons (small)
 				button.btn.btn-disabled.btn-small(disabled type="button") Continue
 				button.btn.btn-small--green(type="button") Success
 				button.btn.btn-small--red(type="button") Delete
 				button.btn.btn-small(type="button") Basic
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons (small)&lt;/label&gt;
 					| &lt;button disabled="" type="button" class="btn btn-disabled btn-small"&gt;Continue&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-small--green"&gt;Success&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-small--red"&gt;Delete&lt;/button&gt;
 					| &lt;button type="button" class="btn btn-small"&gt;Basic&lt;/button&gt;
 
 			.example-box-plain
-				label(for="buttonDescription") Buttons (group)
+				label Buttons (group)
 				.btn-group
 					button.btn(type="button") Left
 					button.btn(type="button") Middle
 					button.btn(type="button") Right
 			pre
 				code.language-html
-					| &lt;label for="buttonDescription"&gt;Buttons (group)&lt;/label&gt;
 					| &lt;div class="btn-group"&gt;
 					| 	&lt;button type="button" class="btn"&gt;Left&lt;/button&gt;
 					| 	&lt;button type="button" class="btn"&gt;Middle&lt;/button&gt;
