--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -30,22 +30,14 @@
     }
 }
 
-.btn-small (
-        @btn-small-text: @heritage-blue,
-        @btn-small-border: @heritage-blue-light,
-        @btn-small-background: @heritage-blue-lightest,
-        @btn-small-background-hover: @heritage-blue
-    ){
+.btn-small {
     padding: .3em .5em;
     margin-left: .25rem;
     font-size: @font-size-small;
-    cursor: pointer;
-    color: @btn-small-text;
-    background-color: @btn-small-background;
-    border: 1px solid @btn-small-border;
-
-    &:hover, &:active, &:focus  {
-        background-color: @btn-small-background-hover;
-        border: 1px solid @btn-small-border;
+    color: @heritage-blue;
+    background-color: @white;
+    &:hover,
+    &:active,
+    &:focus  {
     }
 }
