--- a/libs/tools.less
+++ b/libs/tools.less
@@ -25,69 +25,84 @@
 	@import "mixins/buttons";
 	@import "mixins/revealable";
 	@import "mixins/callout";
-	@import "mixins/fit-content";
-	@import "mixins/flex-box";
+	//@import "mixins/fit-content";
+	//@import "mixins/flex-box";
 	@import "mixins/limit-width";
-	@import "mixins/popup";
+	//@import "mixins/popup";
 	@import "mixins/vertical-align";
 	@import "mixins/btn-icon";
 	//@import "mixins/spacing";
 
 	/* Module files */
-	@import "modules/extent-switcher-modal";
-	@import "modules/header";
-	@import "modules/title";
+	//@import "modules/extent-switcher-modal";
+	//@import "modules/header";
+	//@import "modules/title";
 	@import "modules/main-content";
-	@import "modules/feed";
-	@import "modules/containers";
-	@import "modules/content-index";
-	@import "modules/main-nav";
-	@import "modules/page-info";
-	@import "modules/breadcrumb";
+	//@import "modules/feed";
+	//@import "modules/containers";
+	//@import "modules/content-index";
+	//@import "modules/main-nav";
+	//@import "modules/page-info";
+	//@import "modules/breadcrumb";
 	@import "modules/revealable";
 	@import "modules/callout";
-	@import "modules/tablesort";
+	//@import "modules/tablesort";
 	@import "modules/navigation";
-	@import "modules/section-notice";
-	@import "modules/decision-tree";
-	@import "modules/extent-switcher";
+	//@import "modules/section-notice";
+	//@import "modules/decision-tree";
+	//@import "modules/extent-switcher";
 	@import "modules/revealable";
 	//@import "modules/staff";
-	@import "modules/status";
+	//@import "modules/status";
 	//@import "modules/boxes";
 	@import "modules/sidebar-navigation";
-	@import "modules/sidebar-navigation-accordion";
-	@import "modules/footer-feedback";
-	@import "modules/footer";
-	@import "modules/dialog";
-	@import "modules/references";
-	@import "modules/episerver";
+	//@import "modules/sidebar-navigation-accordion";
+	//@import "modules/footer-feedback";
+	//@import "modules/footer";
+	//@import "modules/dialog";
+	//@import "modules/references";
+	//@import "modules/episerver";
 	//@import "modules/members";
 	//@import "modules/bureau-search";
 	//@import "modules/twitter";
-	@import "modules/environment-marker";
-	@import "modules/skip-nav";
-	@import "modules/side-links";
-	@import "modules/side-chat";
-	@import "modules/calls-for-evidence";
+	//@import "modules/environment-marker";
+	//@import "modules/skip-nav";
+	//@import "modules/side-links";
+	//@import "modules/side-chat";
+	//@import "modules/calls-for-evidence";
 	//@import "modules/search-results";
-	@import "modules/cookie-monster";
-	@import "modules/paragraph-numbers.less";
+	//@import "modules/cookie-monster";
+	//@import "modules/paragraph-numbers.less";
 	//@import "modules/atoz";
-	@import "modules/cookie-monster";
+	//@import "modules/cookie-monster";
 	//@import "modules/toc";
 	//@import "modules/letter";
-	@import "modules/section-notice";
+	//@import "modules/section-notice";
 	//@import "modules/login";
-	@import "modules/page-list";
-	@import "modules/page-tree";
-	@import "modules/share-bar";
-	@import "modules/overlay";
-	@import "modules/adviser";
-	@import "modules/notice";
+	//@import "modules/page-list";
+	//@import "modules/page-tree";
+	//@import "modules/share-bar";
+	//@import "modules/overlay";
+	//@import "modules/adviser";
+	//@import "modules/notice";
 
 	/* IE styles */
 	@import "base/ie";
+
+	/* Tools specific overrides */
+	a {
+		text-decoration: none !important;
+	}
+	h1, h2, h3,h4, h5, h6 {
+	    line-height: @line-height-heading !important;
+	    color: @heading-primary-color !important;
+	    font-weight: @font-weight-bolder !important;
+	    margin-top: 1em !important;
+	    margin-bottom: 0.6em !important;
+	    b, strong {
+	        font-weight: inherit !important;
+	    }
+	}
 }
 
 /* Print styles
