--- a/libs/modules/main-nav-v1.less
+++ b/libs/modules/main-nav-v1.less
@@ -145,6 +145,7 @@
                 padding: .5rem;
                 margin: 0;
                 a {
+                    //border-bottom: 1px solid lightblue;
                     border: none;
                 }
             }
