Hid styles for contents list at top of page until we can give it a class

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -129,7 +129,7 @@
 }
 
 // table of contents at the top of a page
-.articleContent nav {
+/*.articleContent nav {
     .callout(
         @gray-8,
         @heritage-blue
@@ -150,4 +150,4 @@
             }
         }
     }
-}
+}*/
